--- a/styles/main.css
+++ b/styles/main.css
@@ -40,6 +40,11 @@
   margin-right: 10px;
 }
 
+.cart-link {
+
+  padding-top: 0px;
+}
+
 .cart-items {
   padding-right: 3em;
   padding-top: 8px;
@@ -99,7 +104,7 @@
 
 
 .main-footer {
-  color: white;
+
   clear: both;
 }
 
@@ -121,16 +126,18 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+
 }
 
 .footer-nav-container:first-child {
-  padding-left: 1.8em;
+  padding-left: 20em;
   font-size: 20px;
   padding-top: 1.3em;
 }
 
 .footer-nav-container li {
   padding-left: 4.5em;
+  color: white !important;
 }
 
 .footer-cart {
@@ -138,7 +145,12 @@
   right: 0px;
   display: flex;
   flex-direction: row;
-  top: 1.2em;
+  /*top: 1.2em;*/
+}
+
+.cart-items {
+  color: white;
+  padding-top: 1.8em;
 }
 
 .bottom-footer {
@@ -151,10 +163,11 @@
   /*align-content: center;*/
   padding-left: 10em;
   padding-right: 10em;
-  padding-top: .8em;
+  /*padding-top: .8em;*/
+  color: white !important;
 
 }
-
+ 
 
 /*foobar animations*/
 #holder {
